Fixed: in french, the restore button was too large, resulting in cranky display

--- a/client/app/views/styles/application.styl
+++ b/client/app/views/styles/application.styl
@@ -86,6 +86,9 @@ ul#task-list-done
         width 75px
         padding 8px
         font-size 13px
+        overflow hidden
+        text-overflow ellipsis
+        white-space nowrap
 
         &.disabled
             box-shadow none
